--- a/eazyride_mobile/android/app/src/main/res/values/styles.xml
+++ b/eazyride_mobile/android/app/src/main/res/values/styles.xml
@@ -19,5 +19,5 @@
     <style name="NormalTheme" parent="@android:style/Theme.Light.NoTitleBar">
         <item name="android:windowBackground">?android:colorBackground</item>
     </style>
-     <string name="api_key">API_KEY_FROM_BUILD_CONFIG</string>
+    <string name="google_maps_key">YOUR_DEFAULT_API_KEY</string>
 </resources>
